--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="LaunchTheme" parent="android:Theme.Light">
+    <style name="LaunchTheme" parent="@android:style/Theme.DeviceDefault.Light">
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 </resources>
